--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/blog?serverTimezone=GMT%2B8
+    url: jdbc:mysql://localhost:3306/blog1?serverTimezone=GMT%2B8
     username: root
     password: 980404
   jpa:
