show in zyy.show/blog

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,8 @@ spring:
     cache: false
   profiles:
     active: dev
+  messages:
+    basename: i18n.login
+
+
+comment.avatar: /images/avatar.png
