--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,16 +1,16 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/blog1?serverTimezone=GMT%2B8
+    url: jdbc:mysql://localhost:3306/blog?serverTimezone=GMT%2B8
     username: root
-    password: 980404
+    password: 13928102457!zm
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
 logging:
   level:
-    root: info
-    zyy.show.blog: debug
+    root: warn
+    zyy.show.blog: info
   file:
-    path: D:\project\log\blog\blog-dev
+    path: log/blog-pro.log
