--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -1,17 +1,16 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/blog?useUnicode=true&characyerEncoding=utf-8
-    data-username: root
-    data-password: 980404
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/blog?serverTimezone=GMT%2B8
+    username: root
+    password: 980404
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     show-sql: true
 logging:
   level:
-    root: warn
-    zyy.show.blog: info
+    root: info
+    zyy.show.blog: debug
   file:
-    path: log/blog-pro.log
-
+    path: D:\project\log\blog\blog-dev
